--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "microservices",
         "moleculer"
     ],
-    "author": "",
+    "author": "Aleksandr Guidrevitch <aguidrevitch@gmail.com>",
     "devDependencies": {
         "eslint": "^5.16.0",
         "eslint-config-airbnb": "^17.1.0",
