--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,11 @@
-.env
-Dockerfile
-node_modules
-test
+.DS_Store
 .vscode
-.eslintrc.js
+node_modules
+coverage
+data
+test
+Dockerfile
+docker-compose.yml
+npm-debug.log
+yarn-error.log
+.env
